# TacIPC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cu
cmake/: Findcholmod.cmake
include/tacipc/: debug.hpp  dynamicBuffer.cuh  generation.cuh  gradHessConversion.hpp  gradHessMATLAB.cuh  macros.hpp  meta.hpp  serialization.cuh  types.hpp  utils.cuh
include/tacipc/constitutiveModel/: constitutiveModel.cuh
include/tacipc/meshio/: mesh.hpp  readMesh.hpp  writeMesh.hpp
include/tacipc/solver/: CollisionMatrix.cuh  LinearSolver.hpp  Properties.cuh  Solver.cuh  TVWrapper.cuh
include/tacipc/viewer/: viewer.cuh
process/: gen_marker_disp.py  gen_markers.py  vis_marker_disp.py
resources/gel/gelslim-gel-l_0.1/: gelslim-gel-l_0.1.msh  gelslim-gel-l_0.1.vtk  gelslim-gel-l_0.1_1000.msh  gelslim-gel-l_0.1_1000.vtk  gelslim-gel-l_0.1_surf.obj.bak  isBC_gelslim-gel-l_0.1.json  marker_bc_ws.pkl
resources/gel/gelslim-gel-l_0.1-3mm/: gelslim-gel-l_0.1-3mm.msh  gelslim-gel-l_0.1-3mm.vtk  gelslim-gel-l_0.1-3mm_1000.msh  gelslim-gel-l_0.1-3mm_1000.vtk  gelslim-gel-l_0.1-3mm_surf.obj.bak  marker_bc_ws.pkl  marker_xy.npy
scripts/: config.py  run_experiments.py
src/: constitutiveModel.cu  generation.cu
src/meshio/: readMesh.cpp  writeMesh.cpp
src/solver/: Collision.cu  Energy.cu  Initialize.cu  LinearSolve.cu  Pipeline.cu
src/viewer/: viewer.cu
